# GOT-OCR2.0

./: .gitignore  README.md
GOT-OCR-2.0-master/: pyproject.toml  pyvenv.cfg
GOT-OCR-2.0-master/GOT/data/: __init__.py  base_dataset.py  conversation_dataset_qwen.py
GOT-OCR-2.0-master/GOT/demo/: process_results.py  run_ocr_2.0.py  run_ocr_2.0_crop.py  run_ocr_serve.py
GOT-OCR-2.0-master/GOT/eval/: eval_GOT_ocr.py  evaluate_GOT.py  multi_hardware_eval_GOT.py
GOT-OCR-2.0-master/GOT/eval/pyevaltools/: eval_ocr.py  eval_ocr_format.py  eval_ocr_scene.py  merge_results.py
GOT-OCR-2.0-master/GOT/model/: GOT_ocr_2_0.py  __init__.py
GOT-OCR-2.0-master/GOT/model/plug/: blip_process.py
GOT-OCR-2.0-master/GOT/model/vision_encoder/: vary_b.py
GOT-OCR-2.0-master/GOT/train/: train.py  train_GOT.py  train_flash_attn.py  train_lora.py  train_lora_flash_attn.py  trainer.py  trainer_llm_llrd.py  trainer_vit_fixlr.py  trainer_vit_llrd.py
GOT-OCR-2.0-master/GOT/utils/: arguments.py  constants.py  conversation.py  utils.py
GOT-OCR-2.0-master/docker/: .env.example  Dockerfile  client.py  docker-compose.yaml  main.py  start.sh
GOT-OCR-2.0-master/render_tools/: content-mmd-to-html.html  tikz.html
GOT-OCR-2.0-master/results/: demo.html
GOT-OCR-2.0-master/zero_config/: zero2.json  zero3.json
docker/: .env.example  Dockerfile  README.md  docker-compose.yaml  main.py  requirements_win32.txt  start.sh
